# ELTE-IntermediateComputerGraphics-

./: .gitignore  CMakeLists.txt  README.md  packages.nix
Shaders/: Frag_Lighting.frag  Frag_PosCol.frag  Frag_skybox_skeleton.frag  Vert_axes.vert  Vert_skybox.vert
src/: MyApp.cpp  MyApp.h  ParametricSurface.h
